--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,8 +1,2 @@
-Adams:
-    url: https://en.wikipedia.org/wiki/Edwin_Plimpton_Adams
-
-Podolsky:
-    url: https://en.wikipedia.org/wiki/Boris_Podolsky
-
-Rosen:
-    url: https://en.wikipedia.org/wiki/Nathan_Rosen
+Bassett:
+  url: https://scholar.google.com/citations?user=siYpAPsAAAAJ&hl=en&oi=ao
